go-app-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-service
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: app-service
  labels:
    app: go-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
      - name: go-server
        image: go-app:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: app-service
spec:
  selector:
    app: go-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
#---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: ingress-server
#  namespace: app-service
#  annotations:
#    # use the shared ingress-nginx
#    kubernetes.io/ingress.class: "nginx"
#spec:
#  rules:
#  - host: kubernetes.docker.internal
#    http:
#      paths:
#      - path: /goapp
#        backend:
#          serviceName: server-service
#          servicePort: 80
